<resources>
    <string name="app_name">Nerde Yesem</string>
    <string name="btn_authenticate">Login</string>
    <string name="restaurants">Restaurants</string>
    <string name="restaurant">Restaurant: </string>
    <string name="detail">Detail</string>

    <string name="biometric_title">Login</string>
    <string name="biometric_subtitle">Login to Nerde Yesem app</string>
    <string name="biometric_description">Place your finger on the scanner to verify your identity</string>
    <string name="biometric_negative_button_text">Cancel</string>
    <string name="biometric_error_sdk_not_supported">Sdk version not supported</string>
    <string name="biometric_error_hardware_not_supported">Device does not support biometric authentication</string>
    <string name="biometric_error_fingerprint_not_available">Fingerprint is not registered in device</string>
    <string name="biometric_error_permission_not_granted">Permission is not granted by user</string>
    <string name="biometric_failure">Login not successful!</string>
    <string name="biometric_cancelled">Authentication cancelled by user</string>
    <string name="biometric_success">Login Successful</string>
    <string name="login">Login</string>
    <string name="title_restourant_list">Restourants</string>
    <string name="title_restourant_detail">Restourant Detail</string>
    <string name="title_activity_recycle_screen">RecycleScreen</string>
    <string name="title_activity_settings">Settings</string>



    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>


    <string name="pref_title_vibrate">Vibrate</string>
    <string name="bad_location">Cannot reach your location</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="open_gps">Please open GPS !!!</string>
    <string name="address">Address</string>
    <string name="no_internet">Check your network !!!</string>
    <string name="events">Go to Events</string>
    <string name="menu">Go to Menu </string>
    <string name="photos"> Go to Photos </string>
    <string name="currency">Currency: </string>
    <string name="avarage_cost">Average Cost for Two: </string>
    <string name="cuisines">Cuisines: </string>
    <string name="detail_address">Address: </string>
    <string name="restaurant_id">Restaurant Id: </string>
    <string name="aggregate_rating">Aggregate Rating: </string>
    <string name="votes">Votes: </string>
    <string name="has_online">Has Online Delivery: </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>
