<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back2"

    tools:context=".Activities.Detail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/detail_image"
            android:layout_width="300dp"
            android:layout_height="250dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/def" />

        <TextView
            android:id="@+id/detail_rest_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:gravity="center"
            android:text="Restaurant: "
            android:textColor="#ffffff"
            android:textSize="24sp"
            android:textStyle="bold|italic" />
        <TextView
            android:id="@+id/distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="12dp"
            android:gravity="center"
            android:text=""
            android:textColor="#ffffff"
            android:textSize="16sp"/>

        <ScrollView
            android:id="@+id/sc"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">


           <LinearLayout
               android:id="@+id/linear_layout"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical">
                <TextView
                    android:id="@+id/detail_id"
                    android:text="@string/restaurant_id"
                    style="@style/DetailTextViewStyle"/>
               <TextView
                   android:id="@+id/detail_address"
                   android:text="@string/detail_address"
                   style="@style/DetailTextViewStyle"/>
               <TextView
                   android:id="@+id/detail_cuisines"
                   android:text="@string/cuisines"
                   style="@style/DetailTextViewStyle"/>
               <TextView
                   android:id="@+id/detail_avarage_cost"
                   android:text="@string/avarage_cost"
                   style="@style/DetailTextViewStyle"/>
               <TextView
                   android:id="@+id/has_online"
                   android:text="@string/has_online"
                   style="@style/DetailTextViewStyle"/>


               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_margin="5dp"
                   android:orientation="horizontal">
                   <TextView
                       android:id="@+id/detail_agg_rating"
                       style="@style/DetailTextViewStyle"
                       android:textSize="14sp"
                       android:layout_width="wrap_content"
                       android:text="@string/aggregate_rating"/>
                   <TextView
                       android:id="@+id/detail_text"
                       android:layout_width="wrap_content"
                       style="@style/DetailTextViewStyle"
                       android:textSize="14sp"
                       android:text=""/>
                   <TextView
                       android:id="@+id/detail_votes"
                       android:textSize="14sp"
                       android:layout_width="wrap_content"
                       style="@style/DetailTextViewStyle"
                       android:text="@string/votes"/>


               </LinearLayout>
               <TextView
                   android:id="@+id/detail_photos"
                   android:text="@string/photos"
                   android:textColor="#0000b8"
                   android:clickable="true"
                   android:textSize="20sp"
                   style="@style/DetailTextViewStyle"/>
               <TextView
                   android:id="@+id/detail_menu"
                   android:text="@string/menu"
                   android:textSize="20sp"
                   android:textColor="#0000b8"
                   style="@style/DetailTextViewStyle"/>
               <TextView
                   android:id="@+id/detail_events"
                   android:text="@string/events"
                   android:textSize="20sp"
                   android:textColor="#0000b8"
                   style="@style/DetailTextViewStyle"/>



           </LinearLayout>
        </ScrollView>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>